k8s/manifests/jellyfin/ssh.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssh-server
  namespace: jellyfin
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ssh-server
  template:
    metadata:
      labels:
        app: ssh-server
    spec:
      nodeSelector:
        storage: media
      volumes:
        - name: jellyfin-media
          hostPath:
            path: /var/mnt/media
      containers:
        - name: ssh-server
          image: lscr.io/linuxserver/openssh-server:latest
          volumeMounts:
            - mountPath: /mnt/media
              name: jellyfin-media
          ports:
            - containerPort: 2222
---
apiVersion: v1
kind: Service
metadata:
  name: ssh-server
  namespace: jellyfin
spec:
  selector:
    app: ssh-server
  ports:
    - port: 22
      targetPort: 2222
