k8s/manifests/jellyfin/jellyfin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    pod-security.kubernetes.io/enforce: privileged
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jellyfin
  name: jellyfin
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-media
          nfs:
            server: "10.42.42.12"
            path: /volume1/Media
            readOnly: true
        - name: jellyfin-pc
          nfs:
            server: "10.42.42.12"
            path: /volume1/PCStorage
            readOnly: true
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:12.0
          volumeMounts:
            - mountPath: /config
              name: jellyfin-config
            - mountPath: /mnt/media
              name: jellyfin-media
            - mountPath: /mnt/pc
              name: jellyfin-pc
          ports:
            - containerPort: 8096
              name: jellyfin
          resources:
            requests:
              cpu: 50m
              memory: 384Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: jellyfin
  name: jellyfin
spec:
  type: NodePort # Expose to TVs on dtcnet
  selector:
    app: jellyfin
  ports:
    - port: 80
      targetPort: jellyfin
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: jellyfin
  name: jellyfin
spec:
  parentRefs:
    - namespace: default
      name: private-gateway
      sectionName: websecure
  hostnames:
    - jellyfin.o.cavnet.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 80
